--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "mongoose": "^8.13.1"
+    "mongoose": "^8.13.1",
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.17",
